opam-version: "2.0"
name:         "wasmtime"
bug-reports:  "https://github.com/LaurentMazare/ocaml-wasmtime/issues"
homepage:     "https://github.com/LaurentMazare/ocaml-wasmtime"
dev-repo:     "git+https://github.com/LaurentMazare/ocaml-wasmtime.git"
maintainer:   "Laurent Mazare <lmazare@gmail.com>"
authors:      [ "Laurent Mazare" ]

version: "dev"

build: [
  ["bash" "scripts/download_wasmtime.sh"]
  ["dune" "build" "-p" name "-j" jobs]
]

run-test: [
  ["dune" "runtest" "-p" name "-j" jobs]
]

depends: [
  "ctypes" {>= "0.23.0"}
  "ctypes-foreign"
  "dune" {>= "3.0" & build}
  "dune-configurator"
  "ocaml" {>= "5.0"}
]

available: (arch = "x86_64" | arch = "arm64") & (os = "linux" | os = "macos")

synopsis: "Wasmtime bindings for OCaml"
description: """
Bindings for Wasmtime, a small and efficient
runtime for WebAssembly.
"""
