opam-version: "2.0"
name:         "wasmtime"
bug-reports:  "https://github.com/tpetr/ocaml-wasmtime/issues"
homepage:     "https://github.com/tpetr/ocaml-wasmtime"
dev-repo:     "git+https://github.com/tpetr/ocaml-wasmtime.git"
maintainer:   [
  "Laurent Mazare <lmazare@gmail.com>"
  "Tom Petr <trpetr@gmail.com>"
]
authors:      [ "Laurent Mazare" "Tom Petr" ]
license:      "Apache-2.0"

version: "dev"

build: [
  ["dune" "build" "-p" name "-j" jobs]
]

run-test: [
  ["dune" "runtest" "-p" name "-j" jobs]
]

depends: [
  "ctypes" {>= "0.23.0"}
  "dune" {>= "3.0" & build}
  "dune-configurator"
  "libwasmtime" {>= "41.0.0"}
  "ocaml" {>= "5.0"}
]

depexts: [
   ["wasmtime"] {os = "macos" & os-distribution = "homebrew"}
]

synopsis: "Wasmtime bindings for OCaml"
description: """
Bindings for Wasmtime, a small and efficient
runtime for WebAssembly.
"""
