(library
  (name wasmtime)
  (public_name wasmtime)
  (foreign_stubs (language c) (names wasmtime_stubs wasi_capture) (flags :standard -Wno-incompatible-function-pointer-types (:include c_flags.sexp)))
  (c_library_flags (:include c_library_flags.sexp))
  (libraries bigarray ctypes ctypes.foreign ctypes.stubs))

(rule
  (targets c_flags.sexp c_library_flags.sexp)
  (deps    (:discover ../config/discover.exe))
  (action  (run %{discover})))

(rule
  (targets bindings.ml)
  (deps    ../stubs/bindings.ml)
  (action  (copy ../stubs/bindings.ml bindings.ml)))

(rule
  (targets wasmtime_stubs.c wasmtime_generated.ml)
  (deps    (:gen ../stubs/gen.exe))
  (action  (run %{gen})))
